test/should_pass/basic_008.grg
actions basic_008;

rule r {
	pattern {
		x : Node;
	}
	modify {
	}
}

