test/should_fail/ret_005.grg
actions ret_005;

rule r : (Node, Node) {
	pattern {
		x: Node;
		y: Node;
	}
	modify {
		return(x, y, x);
	}
}

